# tek

./: .env.example  INSTALL.md  package.json  pnpm-lock.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-security/: 01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-gateway-core/: 02-01-SUMMARY.md  02-03-SUMMARY.md
.planning/phases/03-cli-interface/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-multi-provider-intelligence/: 04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-memory-persistence/: 05-01-PLAN.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md
.planning/phases/06-agent-capabilities/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-VERIFICATION.md
.planning/phases/07-agent-self-improvement/: 07-01-SUMMARY.md
.planning/phases/08-workflows-scheduling/: 08-01-PLAN.md  08-02-PLAN.md  (+7 more)
.planning/research/: ARCHITECTURE.md  ARCHITECTURE_v03.md  FEATURES.md  FEATURES_v03.md  PITFALLS.md  PITFALLS_v03.md  STACK.md  STACK_v03.md  STACK_v03_SUMMARY.md  SUMMARY.md  SUMMARY_v03.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
next-milestone/: ASSESSMENT.md  HANDOFF.md  QUICK-WINS.md
scripts/: dist.sh  install.sh  remote-install.sh  update.sh  upload-cdn.sh
(+197 files in other folders)
