[package]
name = "tek-desktop"
version = "0.2.0"
edition = "2021"

[lib]
name = "tek_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-websocket = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = { version = "2", features = ["open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
